# testing-nbstripout

./: .pre-commit-config.yaml  LICENSE  README.md  custom_nbstripout.sh  dummy.ipynb  pyproject.toml
